--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -295,4 +295,5 @@
     <string name="error_export_geojson">Can not create geojson output</string>
     <string name="attributes">Attributes</string>
     <string name="error_cache">Bad cache, try rebuild it in layer settings</string>
+    <string name="menu_send_to_ngw">Send to NextGIS</string>
 </resources>
