--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -293,4 +293,5 @@
     <string name="sync_disable">Отключить синхронизацию</string>
     <string name="sync_enable">Включить синхронизацию</string>
     <string name="account">Аккаунт - %1$s</string>
+    <string name="menu_send_to_ngw">Отправить в NextGIS</string>
 </resources>
