--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -293,4 +293,7 @@
     <string name="sync_enable">Enable sync</string>
     <string name="account">Account - %1$s</string>
     <string name="menu_send_to_ngw">Send to NextGIS</string>
+    <string name="sync_disabled">Sync disabled</string>
+    <string name="sync_enable_error">Error enabling sync</string>
+    <string name="sync_enabled">Sync enabled</string>
 </resources>
