--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -205,7 +205,7 @@
     <string name="brightness">Яркость</string>
     <string name="menu_zoom_extent">Увеличить до охвата</string>
     <string name="menu_download_tiles">Загрузить тайлы</string>
-    <string name="select_zoom_levels_to_download">Выберите масштабные уровни для загрузки тайлы в текущем охвате</string>
+    <string name="select_zoom_levels_to_download">Выберите масштабные уровни для загрузки тайлов в текущем охвате</string>
     <string name="start">Начать</string>
     <string name="select_zoom_levels_to_download_title">Выберите масштабные уровни для загрузки</string>
     <string name="download_complete">Загрузка завершена</string>
