--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -39,10 +39,9 @@
     <string name="error_invalid_url">Посилання недійсне</string>
     <string name="qms_unavailable">Сервер геосервисов недоступен</string>
     <string name="nextgis_web">NextGIS</string>
-    <string name="ngw_login_title">Акаунт NextGIS Web</string>
     <string name="ngw_url">Посилання на NextGIS Web</string>
     <string name="password">Пароль</string>
-    <string name="login">Логін</string>
+    <string name="login">Войти</string>
     <string name="user_name">Логін</string>
     <string name="canceled">Скасовано</string>
     <string name="account_already_exists">Акаунт вже існує</string>
@@ -276,7 +275,7 @@
     <string name="new_gis">Создать ГИС</string>
     <string name="manual_ngw">Расширенные настройки</string>
     <string name="instance_name">Имя ГИС</string>
-    <string name="ngw_from_my_nextgis">Создайте свою собственную ГИС на my.nextgis.com</string>
+    <string name="ngw_from_my_nextgis">Еще нет своей ГИС? Зарегистрируйтесь на my.nextgis.com и создайте!</string>
     <string name="new_account">Завести учетную запись в nextgis.com</string>
     <string name="guest">Гость</string>
     <string name="field_not_filled">Некоторые поля пустые</string>
@@ -296,4 +295,7 @@
     <string name="sync_disabled">Синхронизация отключена</string>
     <string name="sync_enable_error">Ошибка при включении синхронизации</string>
     <string name="sync_enabled">Синхронизация включена</string>
+    <string name="click_here">Нажмите сюда!</string>
+    <string name="manual_tip">Есть свой собственный NGW сервер?</string>
+    <string name="nextgis_com">Обратно на экран nextgis.com</string>
 </resources>
