--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -41,10 +41,9 @@
     <string name="error_invalid_url">URL is invalid</string>
     <string name="qms_unavailable">Geoservice server is unavailable</string>
     <string name="nextgis_web">NextGIS</string>
-    <string name="ngw_login_title">NextGIS Web account</string>
     <string name="ngw_url">NextGIS Web URL</string>
     <string name="password">Password</string>
-    <string name="login">Login</string>
+    <string name="login">Sign in</string>
     <string name="user_name">Login</string>
     <string name="canceled">Canceled</string>
     <string name="account_already_exists">Account already exist</string>
@@ -289,9 +288,12 @@
     <string name="new_gis">Create GIS</string>
     <string name="manual_ngw">Switch to advanced</string>
     <string name="instance_name">Instance name</string>
-    <string name="ngw_from_my_nextgis">Create your own GIS at my.nextgis.com</string>
+    <string name="ngw_from_my_nextgis">Do you have GIS? Sign up at my.nextgis.com to get your own one!</string>
     <string name="new_account">Sign up in nextgis.com</string>
     <string name="guest">Guest</string>
+    <string name="click_here">Click here!</string>
+    <string name="nextgis_com">Back to nextgis.com login screen</string>
+    <string name="manual_tip">Have your own NGW server?</string>
     <string name="field_not_filled">Some fields are empty</string>
     <string name="web_map">Web map</string>
     <string name="no_features">Layer has no features</string>
