--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -276,7 +276,7 @@
     <string name="new_gis">Создать ГИС</string>
     <string name="manual_ngw">Расширенные настройки</string>
     <string name="instance_name">Имя ГИС</string>
-    <string name="ngw_from_my_nextgis">Еще нет своей ГИС? Зарегистрируйтесь на my.nextgis.com и создайте!</string>
+    <string name="ngw_from_my_nextgis">Еще нет своей Веб ГИС? Создайте на nextgis.com!</string>
     <string name="guest">Гость</string>
     <string name="field_not_filled">Некоторые поля пустые</string>
     <string name="web_map">Веб карта</string>
@@ -297,6 +297,6 @@
     <string name="sync_enable_error">Ошибка при включении синхронизации</string>
     <string name="sync_enabled">Синхронизация включена</string>
     <string name="click_here">Нажмите сюда!</string>
-    <string name="manual_tip">Есть свой собственный NGW сервер?</string>
-    <string name="nextgis_com">Обратно на экран nextgis.com</string>
+    <string name="manual_tip">Есть свой собственный NextGIS Web?</string>
+    <string name="nextgis_com">Обратно к входу через nextgis.com</string>
 </resources>
