Add freehand drawing, fix #180

--- a/src/main/res/values-cs/strings.xml
+++ b/src/main/res/values-cs/strings.xml
@@ -113,7 +113,7 @@
     <string name="create_vector_layer">Vytvořit vektorovou vrstvu</string>
     <string name="new_layer">Nová vrstva</string>
     <string name="message_layer_created">Vrstva vytvořena</string>
-    <string name="feature_n">Objekt #%1$s</string>
+    <string name="feature_n">Objekt #%1$d</string>
     <string name="new_feature">Nový objekt</string>
     <string name="error_form_create">Vytvožení formuláře selhalo</string>
     <string name="system_default">Výchozí nastavení</string>
@@ -299,4 +299,6 @@
     <string name="click_here">Click here!</string>
     <string name="manual_tip">Have your own NGW server?</string>
     <string name="nextgis_com">Back to nextgis.com login screen</string>
+    <string name="edit_by_touch">Append geometry by touch</string>
+    <string name="title_edit_by_touch">Edit by touch</string>
 </resources>
