--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -103,7 +103,7 @@
     <string name="create_vector_layer">Create vector layer</string>
     <string name="new_layer">New layer</string>
     <string name="message_layer_created">Layer created</string>
-    <string name="feature_n">Feature #%1$s</string>
+    <string name="feature_n">Feature #%1$d</string>
     <string name="new_feature">New feature</string>
     <string name="error_form_create">Form create failed</string>
     <string name="system_default">System default</string>
@@ -298,4 +298,6 @@
     <string name="click_here">Нажмите сюда!</string>
     <string name="manual_tip">Есть свой собственный NGW сервер?</string>
     <string name="nextgis_com">Обратно на экран nextgis.com</string>
+    <string name="edit_by_touch">Дополнить геометрию касанием</string>
+    <string name="title_edit_by_touch">Изменить касанием</string>
 </resources>
