--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -222,7 +222,7 @@
     <string name="layerInfo">Layer info</string>
     <string name="geom_type">Geometry type</string>
     <string name="layer_geom_type">%1$s layer</string>
-    <string name="feature_count">%1$s features</string>
+    <string name="feature_count">%1$d features</string>
     <string name="layer_local_path">Local path: %1$s</string>
     <string name="layer_remote_path">Remote: %1$s</string>
     <string name="layer_has_form">Layer has custom form</string>
@@ -299,4 +299,9 @@
     <string name="nextgis_com">Back to nextgis.com login screen</string>
     <string name="edit_by_touch">Append geometry by touch</string>
     <string name="title_edit_by_touch">Edit by touch</string>
+    <string name="auto">Auto</string>
+    <string name="manual">Manual</string>
+    <string name="skip">Skip</string>
+    <string name="sync_dialog_message">Which option do you want to use for this layer? You can change it later in layer settings or NextGIS accounts.</string>
+    <string name="sync_dialog_title">Sync with NextGIS Web?</string>
 </resources>
