Add new group creation as action in NGW activity

--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -305,4 +305,7 @@
     <string name="sync_dialog_message">Which option do you want to use for this layer? You can change it later in layer settings or NextGIS accounts.</string>
     <string name="sync_dialog_title">Sync with NextGIS Web?</string>
     <string name="import_">Import</string>
+    <string name="new_group">Create new group</string>
+    <string name="new_group_name">Group name:</string>
+    <string name="message_group_created">Group created</string>
 </resources>
