--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -306,4 +306,7 @@
     <string name="sync_dialog_message">Какой вариант вы хотите использовать для слоя? Эту опцию можно поменять в настройках слоя или в аккаунтах NextGIS Web.</string>
     <string name="sync_dialog_title">Синхронизировать с NextGIS Web?</string>
     <string name="import_">Импорт</string>
+    <string name="new_group">Создать новую группу</string>
+    <string name="new_group_name">Имя группы:</string>
+    <string name="message_group_created">Группа создана</string>
 </resources>
