--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -203,9 +203,9 @@
     <string name="brightness">Яркость</string>
     <string name="menu_zoom_extent">Увеличить до охвата</string>
     <string name="menu_download_tiles">Загрузить тайлы</string>
-    <string name="select_zoom_levels_to_download">Выберите масштабные уровни для загрузки тайлов в текущем охвате</string>
+    <string name="select_zoom_levels_to_download">Выберите масштабные уровни для загрузки тайлов в текущем окне</string>
     <string name="start">Начать</string>
-    <string name="select_zoom_levels_to_download_title">Выберите масштабные уровни для загрузки</string>
+    <string name="select_zoom_levels_to_download_title">Локальное кэширование</string>
     <string name="download_complete">Загрузка завершена</string>
     <string name="download_in_progress">Загрузка…</string>
     <string name="cancel_download">Загрузка отменена</string>
