--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="delete_account_ask">Delete account?</string>
     <string name="delete_account_summary">Delete account. All layers connected with this account will be deleted too. Active synchronization will be stopped.</string>
     <string name="delete_account_warn_msg">Account will be deleted!\nAll account layers will be deleted!\nCurrent sync will be stopped!</string>
-    <string name="waiting">Waiting</string>
+    <string name="waiting">Please wait</string>
     <string name="wait_sync_stopping">Waiting of synchronization stopping</string>
     <string name="add">Add</string>
     <string name="select">Select</string>
@@ -311,4 +311,5 @@
     <string name="attributes">Attributes</string>
     <string name="error_cache">Bad cache, try rebuild it in layer settings</string>
     <string name="menu_send_to_ngw">Send to NextGIS</string>
+    <string name="commercial">Available in commercial version</string>
 </resources>
