--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -203,7 +203,7 @@
     <string name="menu_download_tiles">Download tiles</string>
     <string name="select_zoom_levels_to_download">Select min and max zoom levels to download tiles of current extent</string>
     <string name="start">Start</string>
-    <string name="select_zoom_levels_to_download_title">Select zoom levels to download</string>
+    <string name="current_zoom">Current zoom %1$.2f</string>
     <string name="download_complete">Download complete</string>
     <string name="download_in_progress">Download in progress</string>
     <string name="cancel_download">Download canceled</string>
