--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -244,8 +244,7 @@
     <string name="alpha">Opacity</string>
     <string name="layerInfo">Layer info</string>
     <string name="geom_type">Geometry type</string>
-    <string name="layer_geom_type">%1$s layer</string>
-    <string name="feature_count">%1$d features</string>
+    <string name="feature_count">Features: %1$d (%2$s)</string>
     <string name="layer_local_path">Local path: %1$s</string>
     <string name="layer_remote_path">Remote: %1$s</string>
     <string name="layer_has_form">with form</string>
