--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -237,7 +237,7 @@
     <string name="multi_polygon">Мультиполигон</string>
     <string name="update_coordinates">Обновить координаты</string>
     <string name="background_task_started">Задача инициализации слоя запущена</string>
-    <string name="process_layer">Обработка слоя</string>
+    <string name="processing">Обработка</string>
     <string name="error_unsupported_layer_type">Данный тип слоя не поддерживается</string>
     <string name="value_not_from_list">Значение не из списка</string>
     <string name="share_gpx_multiple">Как сохранить выбранные треки?</string>
