--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -310,4 +310,7 @@
     <string name="new_group_name">Имя группы:</string>
     <string name="message_group_created">Группа создана</string>
     <string name="commercial">Доступно в коммерческой версии</string>
+    <string name="clear_layer">Удалить все объекты</string>
+    <string name="are_you_sure">Вы уверены?</string>
+    <string name="delete_features">Все объекты будут удалены.</string>
 </resources>
